# DeFT

./: .gitignore  README.md  config.py  pyproject.toml
apollo_container/: container.py  cyber_bridge.py  map_service.py  utils.py
apollo_container/kdtree/: __init__.py  kdtree.py  kdtree_node.py
apollo_oracle/: README.md  cli.py  core.py
apollo_oracle/oracles/: __init__.py  acceleration_oracle.py  collision_oracle.py  destination_oracle.py  optimal_oracle.py  speeding_oracle.py
apollo_oracle/utils/: __init__.py  map_service.py  obstacle.py
apollo_oracle/utils/kdtree/: kdtree.py  kdtree_node.py
apollo_resim/: README.md  __init__.py  cli.py
cpp/: README.md
cpp/deft/: BUILD  coverage.sh  deft.sh  main.cc
cpp/modules/planning/: on_lane_planning.cc
deft/: cli.py  deft.py  deft_base.py  deft_container.py  deft_last.py  execute.py  extract.py  validate.py
deft/representation/: frame.py  trajectory.py
deft/utils/: __init__.py  apollo_topics.py
docs/: artifact-evaluation.md  reproducing-experiments.md
experiments/: rq1_process.py  rq2_process.py  rq3_process.py
experiments/processed_data/: rq1_reproduce.csv  rq1_similarity.csv  rq1_violations.csv  rq2_reproduce.csv  rq3_efficiency.csv  rq3_ttr.csv
experiments/raw_data/efficiency/: avfuzzer_scenario_1000.json  avfuzzer_scenario_1001.json  avfuzzer_scenario_1002.json  avfuzzer_scenario_1003.json  avfuzzer_scenario_1004.json  avfuzzer_scenario_1005.json  avfuzzer_scenario_1006.json  avfuzzer_scenario_1007.json  (+6150 more)
scripts/: install_apollo.sh  install_hd_maps.sh  install_poetry.sh  set_hd_map.sh
(+6160 files in other folders)
